# pyhop

./: .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_OVERVIEW.md  README.md  demo.py  pyproject.toml
docs/: api-reference.md  installation.md  plugin-development.md  quickstart.md
examples/: __init__.py  calculated_field_transform.py  filewriter_action.py  http_request_action.py  uppercase_transform.py
pyhop/: __init__.py  base.py  plugin.py
templates/: README.md  action_template.py  transform_template.py
